--- a/www.sabor.hr/d5e4234ee99c3214ff48263de9d9be3e8ffd993a.html
+++ b/www.sabor.hr/d5e4234ee99c3214ff48263de9d9be3e8ffd993a.html
@@ -1,3 +1,3 @@
 <html><head><title>Object moved</title></head><body>
-<h2>Object moved to <a href="http://www.sabor.hr/Default.aspx?sec=7175">here</a>.</h2>
+<h2>Object moved to <a href="http://www.sabor.hr/ines-strenja">here</a>.</h2>
 </body></html>
